Add seperate project for protobuf serialization This makes it more difficult to reference protobuf in TheGame.Core

--- a/TheGame.Client/TheGame.Client.csproj
+++ b/TheGame.Client/TheGame.Client.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TheGame.Core\TheGame.Core.csproj" />
+    <ProjectReference Include="..\TheGame.Protobuf\TheGame.Protobuf.csproj" />
   </ItemGroup>
 
 </Project>
