--- a/TheGame.Server/TheGame.Server.csproj
+++ b/TheGame.Server/TheGame.Server.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TheGame.Core\TheGame.Core.csproj" />
+    <ProjectReference Include="..\TheGame.Protobuf\TheGame.Protobuf.csproj" />
   </ItemGroup>
 
   <ItemGroup>
