--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,22 @@
       // Use IntelliSense to find out which attributes exist for C# debugging
       // Use hover for the description of the existing attributes
       // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+      "name": "MonoGameClient",
+      "type": "coreclr",
+      "request": "launch",
+      //"preLaunchTask": "build",
+      // If you have changed target frameworks, make sure to update the program path.
+      "program": "${workspaceFolder}/TheGame.MonoGameClient/bin/Debug/net6.0/TheGame.MonoGameClient.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/TheGame.MonoGameClient",
+      // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+      "console": "internalConsole",
+      "stopAtEntry": false
+    },
+    {
+      // Use IntelliSense to find out which attributes exist for C# debugging
+      // Use hover for the description of the existing attributes
+      // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
       "name": "DedicatedServer",
       "type": "coreclr",
       "request": "launch",
