--- a/TheGame.Client/TheGame.Client.csproj
+++ b/TheGame.Client/TheGame.Client.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TheGame.Network\TheGame.Network.csproj" />
     <ProjectReference Include="..\TheGame.Protobuf\TheGame.Protobuf.csproj" />
+    <ProjectReference Include="..\TheGame.Core\TheGame.Core.csproj" />
   </ItemGroup>
 
 </Project>
