--- a/TheGame.GodotClient/TheGame.GodotClient.csproj
+++ b/TheGame.GodotClient/TheGame.GodotClient.csproj
@@ -1,14 +1,19 @@
 <Project Sdk="Godot.NET.Sdk/4.0.0-beta.8">
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TheGame.Common\TheGame.Common.csproj" />
     <ProjectReference Include="..\TheGame.NetworkConnection\TheGame.NetworkConnection.csproj" />
     <ProjectReference Include="..\TheGame.Protobuf\TheGame.Protobuf.csproj" />
   </ItemGroup>
+
 </Project>
