--- a/TheGame.ConsoleClient/TheGame.ConsoleClient.csproj
+++ b/TheGame.ConsoleClient/TheGame.ConsoleClient.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TheGame.Common\TheGame.Common.csproj" />
+    <ProjectReference Include="..\TheGame.GameClient\TheGame.GameClient.csproj" />
     <ProjectReference Include="..\TheGame.NetworkConnection\TheGame.NetworkConnection.csproj" />
     <ProjectReference Include="..\TheGame.Protobuf\TheGame.Protobuf.csproj" />
   </ItemGroup>
