--- a/TheGame.GameClient/TheGame.GameClient.csproj
+++ b/TheGame.GameClient/TheGame.GameClient.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Godot.NET.Sdk/4.0.0-beta.8">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <EnableDynamicLoading>true</EnableDynamicLoading>
+    <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TheGame.Common\TheGame.Common.csproj" />
-    <ProjectReference Include="..\TheGame.GameClient\TheGame.GameClient.csproj" />
     <ProjectReference Include="..\TheGame.NetworkConnection\TheGame.NetworkConnection.csproj" />
     <ProjectReference Include="..\TheGame.Protobuf\TheGame.Protobuf.csproj" />
   </ItemGroup>
